sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: ';' expected but '=' found.
  gap:Int=getValueCount()
         ^